<resources>
    <string name="app_name">Surplapp</string>
    <string name="title_activity_home">Home</string>

    <string name="menu_home">Home</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="miPerfil">Perfil</string>
    <string name="misCompras">Mis Compras</string>
    <string name="misVentas">Mis Ventas</string>
    <string name="misDirecciones">Mis Direcciones</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="favoritos">Mis favoritos</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_gallery">Gallery</string>

    <string name="Recuperar">Recuperar</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="mensajeLogin">Inicia sesión para continuar</string>
    <string name="logoSalvavidas">Logo Salvavidas</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciarSesion">Inicar sesión</string>
    <string name="registro"> Registro</string>
    <string name="olvideClave">Olvidé mi clave</string>
    <string name="registrar">Registrar</string>
    <string name="registrar2">Registrar</string>
    <string name="continuar">Continuar</string>
    <string name="nombrePerfil">Nombre perfil</string>
    <string name="Bienvenida">Hola... registra unos pocos datos</string>
    <string name="correoPerfil">Correo perfil</string>
    <string name="desactivar_usuario">Desactivar Usuario</string>
    <string name="agregarDirecciones">Agregar dirección manualmente</string>
    <string name="agregarOSeleccionarDireccion">Agregar o seleccionar una dirección</string>
    <string name="consultarOEditarDireccion">Consultar o editar una dirección</string>
    <string name="agregarFavoritos">Agregar favoritos</string>
    <string name="agregarDireccion">Agregar dirección </string>
    <string name="ubicacionActual">Ubicación actual</string>
    <string name="calle">Calle</string>
    <string name="municipio">Ingrese un municipio</string>
    <string name="barrio">Barrio</string>
    <string name="miCasa">Mi casa</string>
    <string name="direccion">Ingrese una dirección</string>
    <string name="numeroDireccionEjemplo">55</string>
    <string name="agregar">Agregar</string>
    <string name="modificar">Modificar</string>
    <string name="datosAdicionales">¿alguna dato adicional para la dirección?</string>
    <string name="alias">Ingrese un nombre para la dirección</string>
    <string name="Latitud">Latitud</string>
    <string name="Longitud">Longitud</string>

    <string name="nombre">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="documento_identidad">Documento de identidad</string>
    <string name="celular">Celular</string>
    <string name="lista_comida">Lista de comidas preferidas</string>

    <string name="perfilComprador">PERFIL COMPRADOR</string>
    <string name="perfilVendedor">PERFIL VENDEDOR</string>
    <string name="estadoVendedor">SIN REGISTRO</string>
    <string name="razonSocial">Nombre del establecimiento</string>
    <string name="Nit">Nit</string>
    <string name="ActividadEconomica">Actividad económica</string>
    <string name="serVendedor">Quiero ser vendedor</string>
    <string name="solicitar">SOLICITAR</string>
    <string name="logo_vendedor">Logo vendedor</string>

    <string name="ventasProgramadas">Ventas program.</string>
    <string name="agregarProducto">Agregar producto</string>
    <string name="ventasOfertadas">Ventas ofertadas</string>
    <string name="ventasEfectuadas">Ventas efectuadas</string>
    <string name="ventasAnuladas">Ventas anuladas</string>
    <string name="ventasCanceladas">Ventas canceladas</string>
    <string name="ofertasNoVendidas">Ofertas no vendidas</string>

    <string name="comprasEnProceso">Compras en proceso</string>
    <string name="subTituloComprasEnProceso">No hay compras en proceso actualmente</string>
    <string name="comprasRealizadas">Compras realizadas</string>
    <string name="comprasCanceladas">Compras canceladas</string>
    <string name="comprasAnuladas">Compras anuladas</string>

    <string name="nombreProducto">¿Qué deseas vender?</string>
    <string name="nombreProducto2">Nombre producto</string>
    <string name="descripcionProducto">Describe lo que vas a vender</string>
    <string name="descripcionProducto2">Descripción producto</string>
    <string name="precioProducto">Precio</string>
    <string name="precioDomicilio">Precio domicilio</string>
    <string name="descuentoProducto">Descuento</string>
    <string name="direccionVenta">Dirección de la venta</string>
    <string name="porcDescuentoProducto">% Dcto</string>
    <string name="totalProducto">Total</string>
    <string name="signoMoneda">$</string>
    <string name="domicilioProducto">Domicilio producto</string>
    <string name="categoriaProducto">Categoría producto</string>
    <string name="inicio">Inicio</string>
    <string name="fin">Fin</string>
    <string name="estructuraFecha">dd/mm/aaaa</string>
    <string name="registrarProducto">Registrar producto</string>
    <string name="disponibilidadProducto">Disponibilidad del producto</string>
    <string name="desdeProducto">Desde:</string>
    <string name="hastaProducto">Hasta:</string>
    <string name="estructuraHora">hh/mm</string>
    <string name="seleccionarFoto">Seleccionar foto</string>
    <string name="subirFoto">Subir foto</string>
    <string name="descripcionImagen">Imagen</string>
    <string name="tituloFotoPpal">Agregar foto principal</string>
    <string name="noProductosProgramados">No hay productos programados</string>
    <string name="descripcionNoProductos">vaya a "Mis ventas" / "Agregar producto"</string>
    <string name="noProductosOfertados">No hay productos ofertados</string>
    <string name="descripcionNoOfertadosNoVendidos">No hay productos actualmente a los que se les haya terminado su fecha fin</string>
    <string name="noProductosCancelados">No hay productos cancelados</string>
    <string name="descripcionNoCancelados">vaya al producto y oprima el icono de la "X"</string>
    <string name="noProductosAnulados">No hay productos anulados</string>
    <string name="descripcionNoAnulados">vaya al producto y oprima el icono de la "X"</string>
    <string name="noProductosSubtipo">No hay productos para esta clasificacion</string>
    <string name="tenemosEstoParaTi">¡Tenemos esto para tí!</string>
    <string name="queVasAPedirHoy">Hola @nombre@ ¿Que vas a pedir hoy?</string>
    <string name="nroProductosPorDefecto">1</string>
    <string name="menos">-</string>
    <string name="mas">+</string>

    <string name="añadirCarrito">Añadir al carrito</string>
    <string name="verCarrito">Ver carrito</string>
    <string name="tituloCarrito">Carrito de compras</string>
    <string name="subtituloCarrito">No hay productos en el carrito</string>
    <string name="totalCarrito">Total</string>
    <string name="subTotalCarrito">Sub Total</string>
    <string name="cantidad">Cantidad</string>
    <string name="cantidad2">Cantidad</string>
    <string name="comprar">Comprar</string>
    <string name="valor">Precio:</string>
    <string name="uno">1</string>
    <string name="divisor">----------------------------------</string>

    <string name="estado">Estado</string>
    <string name="solicitado">Solicitado</string>
    <string name="articulo">Articulo</string>
    <string name="precioProducto2">Precio Producto</string>
    <string name="precioDomicilio2">Precio Domicilio</string>
    <string name="valorComision">Valor comisión</string>

    <string name="estadisticasComprador">Estadísticas comprador</string>
    <string name="estadisticasVendedor">Estadísticas vendedor</string>

    <string name="tituloProductosSolicitados">Productos solicitados</string>
    <string name="subtituloProductosSolicitados">No hay productos solicitados actualmente</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="para">Para: </string>

    <string name="pagar">Pagar</string>

    <string name="cancelarPedido">Cancelar pedido</string>

    <string name="tituloVentasEfectuadas">Ventas efectuadas</string>
    <string name="subtituloVentasEfectuadas">No hay ventas efectuadas actualmente</string>

    <string name="historial">Historial </string>

    <string name="nroVentasPorDia">Nro. de ventas por día de la semana</string>
    <string name="nroComprasPorProducto">Nro. de compras por producto</string>

    <string name="desde">Desde</string>
    <string name="hasta">Hasta</string>
    <string name="vendedor">Vendedor</string>

    <string name="sinInternet">SIN INTERNET</string>
    <string name="descripcionSinInternet">Por favor revisa tu conexión a internet</string>

    <string name="iniciarFacebook">Iniciar con Facebook</string>
    <string name="facebook_app_id">1541603559379639</string>
    <string name="fb_login_protocol_scheme">fb1541603559379639</string>

    <string name="iniciarGmail">Iniciar con Gmail</string>

    <string name="web_client_id">423730616970-6mn3q3u61lu5futioc1m610focr3ffjm.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_sales_maps">Map</string>
    <string name="title_activity_products_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dirAdicional">Datos adicionales</string>
    <string name="direcion_compra">Direccion</string>
    <string name="TuPedido">Tu Pedido</string>
    <string name="MisProductosFavoritos">Mis Productos Favoritos</string>


</resources>

