<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home"
            android:fontFamily="@font/poppins_bold" />
        <item
            android:id="@+id/NavStatisticalMenu"
            android:icon="@drawable/graph"
            android:title="@string/estadisticas"
            android:fontFamily="@font/poppins_bold" />
        <item
            android:id="@+id/subMenuProfile"
            android:icon="@drawable/perfil"
            android:title="@string/miPerfil"
            android:fontFamily="@font/poppins_bold" />
        <item
            android:id="@+id/nav_purchases"
            android:icon="@drawable/shopping"
            android:title="@string/misCompras"
            android:fontFamily="@font/poppins_bold" />
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/shopping2"
            android:title="@string/misVentas"
            android:fontFamily="@font/poppins_bold" />
        <item
            android:id="@+id/nav_address"
            android:icon="@drawable/address"
            android:title="@string/misDirecciones"
            android:fontFamily="@font/poppins_bold" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/heart"
            android:title="@string/favoritos"
            android:fontFamily="@font/poppins_bold" />

        <item
            android:id="@+id/nav_settings"
            android:fontFamily="@font/poppins_bold"
            android:icon="@drawable/settings"
            android:title="@string/configuraciones"
            android:visible="false" />
    </group>
</menu>