<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.desarollo.salvavidasapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_address"
            app:destination="@id/nav_address" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.desarollo.salvavidasapp.ui.profile.Profile"
        android:label="@string/miPerfil"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_direction"
        android:name="com.desarollo.salvavidasapp.ui.direction.FrmAddress"
        android:label="Mis direcciones"
        tools:layout="@layout/activity_frm_address" />

    <fragment
        android:id="@+id/nav_address"
        android:name="com.desarollo.salvavidasapp.ui.direction.ListAddress"
        android:label="Mis direcciones"
        tools:layout="@layout/fragment_address" />

    <fragment
        android:id="@+id/subMenuProfile"
        android:name="com.desarollo.salvavidasapp.ui.profile.SubMenuProfile"
        android:label="Sub menú perfil"
        tools:layout="@layout/fragment_sub_menu_profile">
        <action
            android:id="@+id/action_subMenuProfile_to_nav_profile"
            app:destination="@id/nav_profile" />
    </fragment>
    <fragment
        android:id="@+id/nav_sales"
        android:name="com.desarollo.salvavidasapp.ui.sales.sales"
        android:label="Mis ventas"
        tools:layout="@layout/fragment_sales" />
    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.desarollo.salvavidasapp.ui.statistics.buyerStatistics"
        android:label="@string/estadisticasComprador"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.desarollo.salvavidasapp.ui.favorites.favorites"
        android:label="@string/favoritos"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.desarollo.salvavidasapp.ui.settings.Settings"
        android:label="@string/configuraciones"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_purchases"
        android:name="com.desarollo.salvavidasapp.ui.purchases.nav_misCompras"
        android:label="@string/misCompras"
        tools:layout="@layout/fragment_nav_mis_compras" />
    <fragment
        android:id="@+id/NavStatisticalMenu"
        android:name="com.desarollo.salvavidasapp.ui.statistics.statisticalMenu"
        android:label="Menú estadísticas"
        tools:layout="@layout/fragment_statistical_menu">
        <action
            android:id="@+id/action_statisticalMenu_to_nav_statistics"
            app:destination="@id/nav_statistics" />
        <action
            android:id="@+id/action_NavStatisticalMenu_to_sellerStatistics"
            app:destination="@id/sellerStatistics" />
    </fragment>
    <fragment
        android:id="@+id/sellerStatistics"
        android:name="com.desarollo.salvavidasapp.ui.statistics.sellerStatistics"
        android:label="@string/estadisticasVendedor"
        tools:layout="@layout/fragment_seller_statistics" />


</navigation>