<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.seller.seller">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical">
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/perfilVendedor"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/estadoVendedor"
            android:textAlignment="center"
            android:textSize="18sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <ImageView
                android:id="@+id/foto_perfil"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/logo_vendedor"
                app:srcCompat="@drawable/icono_user_vendedor"
                app:tint="@color/red"
                tools:src="@tools:sample/avatars" />
        </FrameLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-71dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />


                <TextView
                    android:id="@+id/tv_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/nombre"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/poppins_light"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_apellido"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/apellidos"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/poppins_light"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_nombre" />


                <TextView
                    android:id="@+id/tv_identidad"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/documento_identidad"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/poppins_light"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/sp_municipio" />

                <TextView
                    android:id="@+id/tv_celular"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/celular"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/poppins_light"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_identidad" />

                <EditText
                    android:id="@+id/et_razon_social"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    android:hint="@string/razonSocial"
                    android:fontFamily="@font/poppins_light"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toBottomOf="@id/tv_celular"
                    android:autofillHints="@string/razonSocial" />

                <EditText
                    android:id="@+id/et_nit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    android:hint="@string/Nit"
                    android:inputType="number"
                    android:fontFamily="@font/poppins_light"
                    app:layout_constraintTop_toBottomOf="@id/et_razon_social"
                    android:autofillHints="@string/Nit" />

                <Spinner
                    android:id="@+id/sp_actividad_economica"
                    android:layout_width="320sp"
                    android:layout_height="50sp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:background="#FFFFFF"
                    android:fontFamily="@font/abel"
                    android:hint="@string/ActividadEconomica"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_nit" />

                <Button
                    android:id="@+id/btn_registrar_vendedor"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/solicitar"
                    android:fontFamily="@font/poppins_semibold"
                    app:layout_constraintTop_toBottomOf="@id/tv_celular" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>