<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/fondo"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/id_imagen_perfil"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:contentDescription="@string/descripcionImagen"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/logo_surplapp_gris_sin_fondo2" />

    <TextView
        android:id="@+id/id_nombre_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nombrePerfil"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/id_correo_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correoPerfil" />

</LinearLayout>