<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".profile_initial">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/nombre_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/Bienvenida"
        android:textAlignment="center"
        android:textSize="24sp" />

</LinearLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="190dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-71dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/tv_nombre"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/tv_apellido"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/apellidos"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@id/tv_nombre" />


            <EditText
                android:id="@+id/tv_identidad"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/documento_identidad"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/sp_municipio" />

            <EditText
                android:id="@+id/tv_celular"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/celular"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/tv_identidad" />

            <Button
                android:id="@+id/btn_registrar_perfil"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="30dp"
                app:cornerRadius="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/continuar"
                app:layout_constraintTop_toBottomOf="@id/tv_celular" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>